changes aren't showing up

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
            lisafrank_alien_car, lisa_frank_angle];
   }
   
-  // p5.js stuff
   function setup() {
     createCanvas(windowWidth, windowHeight, WEBGL);
     for (let i = 0, i < 20; i++){
@@ -125,8 +124,8 @@
 */ -->
   
 <!-- /* </style> -->
-<!-- <body> */ -->
-<!--   <img src="cobra_kai.gif" alt="cobra kai logo">
+<body> */
+  <img src="cobra_kai.gif" alt="cobra kai logo">
   <img src="disney_logo.gif" alt="disney logo">
   <img src="ducttape.gif" alt="duct tape">
   <img src="elite_logo.gif" alt="elite logo">
@@ -138,19 +137,10 @@
   <img src="lisa_frank_angle.gif" alt="angel in a cloud">
 
   <section class="main">
-    <h1>Welcome To My Home Page</h1>
+    <h1>My > me</h1>
     <p>
-      I'm glad you came, have fun and join the party.
-      You can also check out my other home page
-      <a href="http://nickbriz.com" target="_blank">here</a>!
+      this isn't updating
     </p>
-  </section> -->
+  </section>
 
-<!--   <section class="party">
-    <img src="dancing-spiderman.gif" alt="dancing spiderman">
-    <img src="dancing-baby.gif" alt="dancing baby">
-    <img src="net-party.gif" alt="Internet party">
-    <img src="dancing-robot.gif" alt="dancing robot">
-    <img src="dancing-girl.gif" alt="a dancing girl">
-  </section> -->
-<!-- </body> -->
+</body>
