--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
 
 <script>
-  
   /* to give each gif properties to drop by and show 
-  */
+   */
   let cobra_kai;
   let disney_logo;
   let ducttape;
@@ -15,28 +14,28 @@
   let lisa_frank_angle;
   let gifs = [];
   let gifDrop = [];
-  
-  class gifDrop {
-    constructor(g){
+
+  class drop {
+    constructor(g) {
       this.x = random(windowWidth);
       this.y = 0;
       this.r = random(50, 100);
       this.gif = g;
-      this.yspeed = random(4,10);
+      this.yspeed = random(4, 10);
     }
-    fall(){
-      if (this.y < windowHeight){
+    fall() {
+      if (this.y < windowHeight) {
         this.y = this.y + this.yspeed;
       }
     }
-    
-    show(){
-     image(this.gif, this.x, this.y. this.r, this.r);
+
+    show() {
+      image(this.gif, this.x, this.y.this.r, this.r);
     }
 
   }
-  
-    function preload(){
+
+  function preload() {
     cobra_kai = loadImage('cobra_kai.gif');
     disney_logo = loadImage('disney_log.gif');
     ducttape = loadImage('ducttape.gif');
@@ -46,24 +45,25 @@
     jatp_logo = loadImage('jatp_logo.gif');
     lisa_frank_alien_car = loadImage('lisa_frank_alien_car.gif');
     lisa_frank_angle = loadImage('lisa_frank_angle.gif');
-    gifs = [cobra_kai, disney_logo, ducttape, elitelogo
-           gilmore_girls_lukes, jatp_logo,
-           lisafrank_alien_car, lisa_frank_angle];
   }
-  
+
   function setup() {
     createCanvas(windowWidth, windowHeight, WEBGL);
-    for (let i = 0, i < 20; i++){
+    gifs = [cobra_kai, disney_logo, ducttape, elitelogo,
+      gilmore_girls_lukes, jatp_logo,
+      lisafrank_alien_car, lisa_frank_angle
+    ];
+    for (let i = 0, i < 20; i++) {
       let newgif = random(gifs)
-      let gdrop = new gifDrop(newgif);
-      gifDrop.push(gdrop); 
+      let gdrop = new drop(newgif);
+      gifDrop.push(gdrop);
     }
     background(0);
   }
-  
-  
+
+
   function draw() {
-    for(int i = 0; i < gifDrop.length; i++){
+    for (int i = 0; i < gifDrop.length; i++) {
       gifDrop[i].fall();
       gifDrop[i].show();
     }
@@ -122,9 +122,9 @@
     top: 83px;
   } 
 */ -->
-  
+
 <!-- /* </style> -->
-<body> */
+<!-- <body>
   <img src="cobra_kai.gif" alt="cobra kai logo">
   <img src="disney_logo.gif" alt="disney logo">
   <img src="ducttape.gif" alt="duct tape">
@@ -143,4 +143,4 @@
     </p>
   </section>
 
-</body>
+</body> -->
