--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
 
 <script>
+  
   /* to give each gif properties to drop by and show 
-   */
+  */
   let cobra_kai;
   let disney_logo;
   let ducttape;
@@ -14,28 +15,28 @@
   let lisa_frank_angle;
   let gifs = [];
   let gifDrop = [];
-
-  class drop {
-    constructor(g) {
+  
+  class gifDrop {
+    constructor(g){
       this.x = random(windowWidth);
       this.y = 0;
       this.r = random(50, 100);
       this.gif = g;
-      this.yspeed = random(4, 10);
+      this.yspeed = random(4,10);
     }
-    fall() {
-      if (this.y < windowHeight) {
+    fall(){
+      if (this.y < windowHeight){
         this.y = this.y + this.yspeed;
       }
     }
-
-    show() {
-      image(this.gif, this.x, this.y.this.r, this.r);
+    
+    show(){
+     image(this.gif, this.x, this.y. this.r, this.r);
     }
 
   }
-
-  function preload() {
+  
+    function preload(){
     cobra_kai = loadImage('cobra_kai.gif');
     disney_logo = loadImage('disney_log.gif');
     ducttape = loadImage('ducttape.gif');
@@ -45,88 +46,53 @@
     jatp_logo = loadImage('jatp_logo.gif');
     lisa_frank_alien_car = loadImage('lisa_frank_alien_car.gif');
     lisa_frank_angle = loadImage('lisa_frank_angle.gif');
+    gifs = [cobra_kai, disney_logo, ducttape, elitelogo
+           gilmore_girls_lukes, jatp_logo,
+           lisafrank_alien_car, lisa_frank_angle];
   }
-
-  function setup() {
-    createCanvas(windowWidth, windowHeight, WEBGL);
-    gifs = [cobra_kai, disney_logo, ducttape, elitelogo,
-      gilmore_girls_lukes, jatp_logo,
-      lisafrank_alien_car, lisa_frank_angle
-    ];
-    for (let i = 0, i < 20; i++) {
-      let newgif = random(gifs)
-      let gdrop = new drop(newgif);
-      gifDrop.push(gdrop);
-    }
-    background(0);
-  }
+</script> -->
 
 
-  function draw() {
-    for (int i = 0; i < gifDrop.length; i++) {
-      gifDrop[i].fall();
-      gifDrop[i].show();
-    }
-  }
-</script>
-
-
-<!-- <style> -->
-<!-- /*   body {
+<style>
+  body {
     background-color: black;
     background-image: url(staticbackground.gif);
   }
-
-  .main {
-    max-width: 500px;
-    margin: 150px auto;
+  
+  img {
+    position: absolute;
+    top: 300px;
+    animation: animate__bounceInDown; 
+    animation-duration: 10s;
   }
 
-  .party {
-    max-width: 600px;
-    margin: 50px auto;
-  }
 
-  h1,
-  p {
-    color: rgb(0, 255, 0);
-    text-align: center;
-  }
 
-  p {
-    border: 10px inset rgb(0, 255, 0);
-    padding: 10px;
-  }
-
-  h1 {
-    font-size: 32px;
-    font-family: fantasy;
-  }
-
-  a {
-    color: pink;
-    text-decoration: none;
-  }
-
-  body > img {
+/*   body>img {
     position: absolute;
   }
-  
+
   img[alt="tv"] {
     top: 290px;
     left: calc(50vw - 50px);
   }
-  
+
   img[alt="pc"] {
     left: calc(50vw + 10px);
     top: 83px;
-  } 
-*/ -->
+  } */
 
-<!-- /* </style> -->
-<!-- <body>
+</style>
+<head>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+</head>
+<body>
+  
   <img src="cobra_kai.gif" alt="cobra kai logo">
-  <img src="disney_logo.gif" alt="disney logo">
+<!--   <img src="disney_logo.gif" alt="disney logo">
   <img src="ducttape.gif" alt="duct tape">
   <img src="elite_logo.gif" alt="elite logo">
   <img src="gilmore_girls_lukes.gif" alt="lukes dinner mug">
@@ -134,13 +100,5 @@
   <img src="jatp_logo.gif" alt="julie and the phantoms logo">
   <img src="lighting.gif" alt="lighting">
   <img src="lisa_frank_alien_car.gif" alt="aliens in a car">
-  <img src="lisa_frank_angle.gif" alt="angel in a cloud">
-
-  <section class="main">
-    <h1>My > me</h1>
-    <p>
-      this isn't updating
-    </p>
-  </section>
-
-</body> -->
+  <img src="lisa_frank_angle.gif" alt="angel in a cloud"> -->
+</body>
