--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
     justify-content: center;
   }
   .year-button {
-    border: 8px inset pink;
-    padding: 15px 25px;
-    background-image: url(triangles.gif);
+    border: 8px ridge pink;
+    padding: 15px 15px;
+    background-image: url(y2000bg.jpg);
     background-position: center;
     background-size: cover;
     
-    color: pink;
+    color: white;
     font-size: 24px;
+    font-family: Papyrus;
+    font-weight: bold;
     cursor: pointer;
   }
 </style>
