adding button backgrounds?

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     display: flex;
     justify-content: center;
   }
-  .year-button {
+  
+  #y2000 {
     border: 8px ridge pink;
     padding: 15px 15px;
     background-image: url(y2000bg.jpg);
@@ -28,15 +29,31 @@
     font-weight: bold;
     cursor: pointer;
   }
+  
+  #y2005 {
+    border: 8px ridge pink;
+    padding: 15px 15px;
+    background-image: url(y2005bg.jpg);
+
+    background-size: cover;
+    
+    color: black;
+    font-size: 24px;
+    font-family: Papyrus;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+
 </style>
 
 <body>
   <div class="years">
-    <button class="year-button">2000</button>
-    <button class="year-button">2005</button>
-    <button class="year-button">2010</button>
-    <button class="year-button">2015</button>
-    <button class="year-button">2020</button>
+    <button class="year" id="y2000">2000</button>
+    <button class="year" id="y2005">2005</button>
+    <button class="year" id="y2010">2010</button>
+    <button class="year" id="y2015">2015</button>
+    <button class="year" id="y2020">2020</button>
   </div>
   <div class="cats">
     <button class="cat-button">movies</button>
