changing 2020 background button

--- a/index.html
+++ b/index.html
@@ -15,33 +15,42 @@
     display: flex;
     justify-content: center;
   }
-  
-  #y2000 {
-    border: 8px ridge pink;
-    padding: 15px 15px;
-    background-image: url(y2000bg.jpg);
+  .year{
+    padding: 10px 10px;
     background-position: center;
     background-size: cover;
-    
     color: white;
-    font-size: 24px;
+    font-size: 25px;
     font-family: Papyrus;
     font-weight: bold;
+  }
+  
+  #y2000 {
+    border: 10px ridge pink;
+    background-image: url(y2000bg.jpg);
     cursor: pointer;
   }
   
   #y2005 {
-    border: 8px ridge pink;
-    padding: 15px 15px;
+    border: 10px ridge #183751;
     background-image: url(y2005bg.jpg);
-
-    background-size: cover;
-    
-    color: black;
-    font-size: 24px;
-    font-family: Papyrus;
-    font-weight: bold;
     cursor: pointer;
+  }
+  #y2010 {
+    border: 10px ridge hsl(55, 100%, 61%);
+    background-image: url(y2010bg.jpg);
+    cursor: pointer;
+  }
+  #y2015 {
+    border: 10px ridge hsl(232, 32%, 26%);
+    background-image: url(y2015bg.jpg);
+    cursor: pointer;
+  }
+  #y2020 {
+    border: 10px ridge hsl(232, 32%, 26%);
+    background-image: url(y2020bg.jpg);
+    cursor: pointer;
+    font-size: 25px;
   }
   
 
