about to make category icon

--- a/index.html
+++ b/index.html
@@ -23,34 +23,37 @@
     font-size: 25px;
     font-family: Papyrus;
     font-weight: bold;
+    cursor: pointer;
   }
   
   #y2000 {
     border: 10px ridge pink;
     background-image: url(y2000bg.jpg);
-    cursor: pointer;
   }
   
   #y2005 {
     border: 10px ridge #183751;
     background-image: url(y2005bg.jpg);
-    cursor: pointer;
   }
   #y2010 {
     border: 10px ridge hsl(55, 100%, 61%);
     background-image: url(y2010bg.jpg);
-    cursor: pointer;
   }
   #y2015 {
     border: 10px ridge hsl(232, 32%, 26%);
     background-image: url(y2015bg.jpg);
-    cursor: pointer;
   }
   #y2020 {
-    border: 10px ridge hsl(232, 32%, 26%);
-    background-image: url(y2020bg.jpg);
-    cursor: pointer;
+    border: 10px ridge  hsl(120, 20%, 70%);
+    background-image: url(y2020bkg.jpg);
     font-size: 25px;
+  }
+  
+  .cat {
+    cursor: pointer;
+  }
+   #cmov {
+    background-image: url(movieicon.png);
   }
   
 
@@ -65,10 +68,10 @@
     <button class="year" id="y2020">2020</button>
   </div>
   <div class="cats">
-    <button class="cat-button">movies</button>
-    <button class="cat-button">tv</button>
-    <button class="cat-button">books</button>
-    <button class="cat-button">trends</button>
+    <button class="cat" id="cmov">movies</button>
+    <button class="cat" id="ctv">tv</button>
+    <button class="cat" id="cbks">books</button>
+    <button class="cat" id="ctrd">trends</button>
   </div>
    <div class="stop">
      <button class="stop-button">stop</button>
