--- a/index.html
+++ b/index.html
@@ -123,20 +123,37 @@
   const drops = []
   const mov_2000 = []
   const mov_2005 = []
-  const mov_2010 = []
+  const mov_2010 = ['hunger_games_pin.gif',
+]
   const mov_2015 = []
   const mov_2020 = []
+  
+  const tv_2000 = []
+  const tv_2005 = ['disney_logo.gif',
+]
+  const tv_2010 = []
+  const tv_2015 = ['RBD_logo.gif', 'gilmore_girls_lukes.gif','elite_logo.gif'
+                  ]
+  const tv_2020 = ['cobra_kai.gif', 'disney_logo.gif',
+                  'jatp_logo.gif',
+
+]
+  
+  const book_2000 = []
+  const book_2005 = []
+  const book_2010 = ['hunger_games_pin.gif',
+]
+  const book_2015 = []
+  const book_2020 = []
+  
+  const trend_2000 = []
+  const trend_2005 = []
+  const trend_2010 = ['ducttape.gif',]
+  const trend_2015 = []
+  const trend_2020 = []
 
 
   const imgs = [
-    'RBD_logo.gif',
-    'cobra_kai.gif',
-    'disney_logo.gif',
-    'ducttape.gif',
-    'elite_logo.gif',
-    'gilmore_girls_lukes.gif',
-    'hunger_games_pin.gif',
-    'jatp_logo.gif',
     'lighting.gif',
     'lisa_frank_alien_car.gif',
     'lisa_frank_angle.gif',
