--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   //   }
   // }
   
-  document.querySelector('y2000')
+  document.querySelector('#y2000')
     .addEventListener('click', () => {
     yr00 = !yr00
     if (yr00) {
@@ -212,7 +212,7 @@
     }
   })
  
-  document.querySelector('y2005')
+  document.querySelector('#y2005')
     .addEventListener('click', () => {
     yr05 = !yr05
     if (yr05) {
@@ -231,7 +231,7 @@
     }
   })
   
-  document.querySelector('y2010')
+  document.querySelector('#y2010')
     .addEventListener('click', () => {
     yr10 = !yr10
     if (yr10) {
@@ -250,7 +250,7 @@
     }
   })
   
-  document.querySelector('y2015')
+  document.querySelector('#y2015')
     .addEventListener('click', () => {
     yr15 = !yr15
     if (yr15) {
@@ -269,7 +269,7 @@
     }
   })
   
-  document.querySelector('y2020')
+  document.querySelector('#y2020')
     .addEventListener('click', () => {
     yr20 = !yr20
     if (yr20) {
