new add with year and cat

--- a/index.html
+++ b/index.html
@@ -200,16 +200,16 @@
     yr00 = !yr00
     if (yr00) {
       if (movie) {
-        add(mov_2000)
+        add(mov_2000, '2000', 'movie')
       }
       if (tv) {
-        add(tv_2000)
+        add(tv_2000, '2000', 'tv')
       }
       if (book) {
-        add(book_2000)
+        add(book_2000, '2000', 'book')
       }
       if (trend) {
-        add(trend_2000)
+        add(trend_2000, '2000', 'trend')
       }
     }
   })
@@ -219,16 +219,16 @@
     yr05 = !yr05
     if (yr05) {
       if (movie) {
-        add(mov_2005)
+        add(mov_2005, '2005', 'movie')
       }
       if (tv) {
-        add(tv_2005)
+        add(tv_2005, '2005', 'tv')
       }
       if (book) {
-        add(book_2005)
+        add(book_2005, '2005', 'book')
       }
       if (trend) {
-        add(trend_2005)
+        add(trend_2005, '2005', 'trend')
       }
     }
   })
@@ -238,16 +238,16 @@
     yr10 = !yr10
     if (yr10) {
       if (movie) {
-        add(mov_2010)
+        add(mov_2010, '2010', 'movie')
       }
       if (tv) {
-        add(tv_2010)
+        add(tv_2010, '2010', 'tv')
       }
       if (book) {
-        add(book_2010)
+        add(book_2010, '2010', 'book')
       }
       if (trend) {
-        add(trend_2010)
+        add(trend_2010, '2010', 'trend')
       }
     }
   })
@@ -257,16 +257,16 @@
     yr15 = !yr15
     if (yr15) {
       if (movie) {
-        add(mov_2015)
+        add(mov_2015,'2015', 'movie')
       }
       if (tv) {
-        add(tv_2015)
+        add(tv_2015,'2015', 'tv')
       }
       if (book) {
-        add(book_2015)
+        add(book_2015,'2015', 'book')
       }
       if (trend) {
-        add(trend_2015)
+        add(trend_2015,'2015', 'trend')
       }
     }
   })
@@ -276,16 +276,16 @@
     yr20 = !yr20
     if (yr20) {
       if (movie) {
-        add(mov_2020)
+        add(mov_2020, '2020', 'movie')
       }
       if (tv) {
-        add(tv_2020)
+        add(tv_2020, '2020', 'tv')
       }
       if (book) {
-        add(book_2020)
+        add(book_2020, '2020', 'book')
       }
       if (trend) {
-        add(trend_2020)
+        add(trend_2020, '2020', 'trend')
       }
     }
   })
