added yr and cat in the wrong place

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
   
   function add(list, yr, cat){
     for (let i =0; i< list.length; i++) {
-        let d = new Drop(list[i])
-        drops.push(d, yr, cat)
+        let d = new Drop(list[i],yr,cat)
+        drops.push(d)
     }
   }
   
