--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
   }
   
   #y2000 {
-    border: 10px ridge pink;
+    border: 5px double pink;
     background-image: url(y2000bg.jpg);
   }
   
   #y2005 {
-    border: 10px ridge #183751;
+    border: 5px double #183751;
     background-image: url(y2005bg.jpg);
   }
   #y2010 {
-    border: 10px ridge hsl(55, 100%, 61%);
+    border: 5px double hsl(55, 100%, 61%);
     background-image: url(y2010bg.jpg);
   }
   #y2015 {
-    border: 10px ridge hsl(232, 32%, 26%);
+    border: 5px double hsl(232, 32%, 26%);
     background-image: url(y2015bg.jpg);
   }
   #y2020 {
-    border: 10px ridge  hsl(120, 20%, 70%);
+    border: 5px double hsl(120, 20%, 70%);
     background-image: url(y2020bkg.jpg);
     font-size: 25px;
   }
@@ -52,6 +52,7 @@
   .cat {
     cursor: pointer;
     width: 75px;
+    border-radius: 75px;
   }
 
   
@@ -170,12 +171,22 @@
     }
   }
   
+  function cat_border(c, clicked){
+    let catimg = document.querySelector(c)
+    if(clicked){
+      catimg.style.border ="5px ridge hsla(175, 79%, 79%, 0.83)";
+    } else {
+      catimg.style.border = "";
+    }
+  }
+  
   document.querySelector('#cmov')
     .addEventListener('click', () => {
       movie = !movie;
       if(!movie){
         remove_cat('movie')
       }
+      cat_border('#cmov', movie)
   })
   
   document.querySelector('#ctv')
@@ -184,6 +195,7 @@
       if(!tv){
         remove_cat('tv')
       }
+      cat_border('#ctv', tv)
   })
   
   document.querySelector('#cbks')
@@ -192,6 +204,7 @@
       if(!book){
         remove_cat('book')
       }
+      cat_border('#cbks', book)
   })
   
   document.querySelector('#ctrd')
@@ -200,6 +213,7 @@
       if(!trend){
         remove_cat('trend')
       }
+      cat_border('#ctrd', trend)
   })
   
   function add(list, yr, cat){
