removing from default

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: center;
   }
+  
   .year{
     padding: 5px 5px;
     background-position: center;
@@ -27,24 +28,24 @@
   }
   
   #y2000 {
-    border: 5px double pink;
+    border: 5px pink;
     background-image: url(y2000bg.jpg);
   }
   
   #y2005 {
-    border: 5px double #183751;
+    border: 5px #183751;
     background-image: url(y2005bg.jpg);
   }
   #y2010 {
-    border: 5px double hsl(55, 100%, 61%);
+    border: 5px hsl(55, 100%, 61%);
     background-image: url(y2010bg.jpg);
   }
   #y2015 {
-    border: 5px double hsl(232, 32%, 26%);
+    border: 5px hsl(232, 32%, 26%);
     background-image: url(y2015bg.jpg);
   }
   #y2020 {
-    border: 5px double hsl(120, 20%, 70%);
+    border: 5px hsl(120, 20%, 70%);
     background-image: url(y2020bkg.jpg);
     font-size: 25px;
   }
